--- a/index.html
+++ b/index.html
@@ -1,2 +1,98 @@
-<script src='build/main.bundle.js'></script>
-Hello World
+
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Keyboard</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan" rel="stylesheet">
+    <style>
+        .btn{
+            padding : 20px  ;
+            border-radius: 16px; 
+			background-color :#AFDCEC;
+        }
+    </style>
+    <h1 style="text-align : center ; font-family: 'Baloo Bhaijaan', cursive;">Keyboard</h1>
+</head>
+
+<body style="background-color :#E77471">
+
+
+    <div style="text-align : center">
+        <textarea id="output" rows="5" cols="100" readonly="readonly" placeholder="กรุณาใส่ข้อความ."></textarea><br><br><br>
+        <div style="padding : 20px ;background-color :#D1D0CE;
+        width: 850;
+        margin: auto;">
+       
+
+        <button class="btn" onclick="go('~')">~</button>
+        <button class="btn" onclick="go('1')">1</button>
+        <button class="btn" onclick="go('2')">2</button>
+        <button class="btn" onclick="go('3')">3</button>
+        <button class="btn" onclick="go('4')">4</button>
+        <button class="btn" onclick="go('5')">5</button>
+        <button class="btn" onclick="go('6')">6</button>
+        <button class="btn" onclick="go('7')">7</button>
+        <button class="btn" onclick="go('8')">8</button>
+        <button class="btn" onclick="go('9')">9</button>
+        <button class="btn" onclick="go('0')">0</button>
+        <button class="btn" onclick="go('-')">-</button>
+        <button class="btn" onclick="go('=')">=</button>
+        <button class="btn" onclick="backspace()">Delete</button><br>
+        <button class="btn" onclick="go('\t')">Tab</button>
+        <button class="btn" onclick="go('q')">Q</button>
+        <button class="btn" onclick="go('w')">W</button>
+        <button class="btn" onclick="go('e')">E</button>
+        <button class="btn" onclick="go('r')">R</button>
+        <button class="btn" onclick="go('t')">T</button>
+        <button class="btn" onclick="go('y')">Y</button>
+        <button class="btn" onclick="go('u')">U</button>
+        <button class="btn" onclick="go('i')">I</button>
+        <button class="btn" onclick="go('o')">O</button>
+        <button class="btn" onclick="go('p')">P</button>
+        <button class="btn" onclick="go('[')">[</button>
+        <button class="btn" onclick="go(']')">]</button>
+        <button class="btn" onclick="go('\\')">\</button><br>
+        <button class="btn" >CapsLock</button>
+        <button class="btn" onclick="go('a')">A</button>
+        <button class="btn" onclick="go('s')">S</button>
+        <button class="btn" onclick="go('d')">D</button>
+        <button class="btn" onclick="go('f')">F</button>
+        <button class="btn" onclick="go('g')">G</button>
+        <button class="btn" onclick="go('h')">H</button>
+        <button class="btn" onclick="go('j')">J</button>
+        <button class="btn" onclick="go('k')">K</button>
+        <button class="btn" onclick="go('l')">L</button>
+        <button class="btn" onclick="go(';')">;</button>
+        <button class="btn" onclick="go('\'')">'</button>
+        <button class="btn" onclick="go('\n')">Enter</button><br>
+        <button class="btn" >Shift</button>
+        <button class="btn" onclick="go('z')">Z</button>
+        <button class="btn" onclick="go('x')">X</button>
+        <button class="btn" onclick="go('c')">C</button>
+        <button class="btn" onclick="go('v')">V</button>
+        <button class="btn" onclick="go('b')">B</button>
+        <button class="btn" onclick="go('n')">N</button>
+        <button class="btn" onclick="go('m')">M</button>
+        <button class="btn" onclick="go(',')">,</button>
+        <button class="btn" onclick="go('.')">.</button>
+        <button class="btn" onclick="go('/')">/</button>
+		<button class="btn" onclick="go('_')">_</button>
+		<button class="btn" onclick="go('@')">@</button>
+        <button class="btn" >Shift</button><br><br>
+        <button class="btn" style="width : 200px" onclick="go(' ')">Space</button><br><br>
+<div>
+
+</div>
+        </div>
+    </div>
+        
+
+
+    <script src='js/index.js'></script>
+</body>
+
+</html>
